<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cryptocurrency tracker</string>
    <string name="separator_name_coin">|</string>
    <string name="name_percent_change_7d">7d</string>
    <string name="name_percent_change_24h">24h</string>
    <string name="name_unit_percent_change">%</string>
    <string name="name_unit_price">USD</string>
    <string name="title_detail_name_coin">Name</string>
    <string name="title_available_supply">Proposal</string>
    <string name="title_market_cap">Market capitalization</string>
    <string name="title_24h_volume">The volume (24 hours)</string>
    <string name="title_total_supply">Total Supply</string>
    <string name="title_max_supply">Max Supply</string>
    <string name="title_name_percent_change_1h">1h</string>
    <string name="title_last_updated">Latest update</string>
    <string name="title_rank">Rank</string>
    <string name="title_price">Price</string>
    <string name="pref_name_currency">Currency</string>
    <string name="pref_currency_default_value">USD</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="about_description">Cryptocurrency rate</string>
    <string name="menu_item_about">About</string>
    <string name="name_percent_change_1h">1h</string>
    <string name="hint_value_from">Enter the number</string>
    <string name="name_button_convert">Convert</string>
    <string name="name_convertor">Currency converter</string>
    <string name="name_change_button"><![CDATA[<=>]]></string>
    <string name="git_hub_link" translatable="false">divizdev/CoinRate</string>
    <string name="website_link" translatable="false">http://divizdev.ru</string>
    <string name="url_play_store" translatable="false">ru.divizdev.coinrate</string>
    <string name="currency_name_rub">Ruble</string>
    <string name="currency_name_usd">Dollar</string>
    <string name="currency_name_eur">Euro</string>
    <string name="change_cryptocurrency">Currency</string>
</resources>