<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ru.divizdev.coinrate.ui.DetailFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/detail_image_view"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:contentDescription="TODO" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/title_detail_name_coin" />

            <EditText
                android:id="@+id/detail_name_coin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:editable="false"
                android:inputType="textPersonName" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        style="@style/TextViewBase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/title_available_supply" />

    <EditText
        android:id="@+id/detail_available_supply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:editable="false"
        android:ems="10"
        android:hint="@string/title_available_supply"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_market_cap" />

    <EditText
        android:id="@+id/detail_market_cap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title_market_cap"
        android:inputType="none" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_24h_volume" />

    <EditText
        android:id="@+id/detail_24h_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"
        android:hint="@string/title_24h_volume"
        android:inputType="none"
        android:singleLine="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_rank"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            style="@style/TextViewBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_percent_change_24h"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/percent_change_24h"
            style="@style/TextViewBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:text="+2" />

        <TextView
            style="@style/TextViewBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_unit_percent_change" />

        <TextView
            style="@style/TextViewBase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/name_percent_change_7d"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/percent_change_7d"
            style="@style/TextViewBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:gravity="end"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:text="-1" />

        <TextView
            style="@style/TextViewBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_unit_percent_change" />

    </LinearLayout>

</LinearLayout>
