<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_project"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:padding="4dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_coin"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="6dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/symbol_coin"
                    style="@style/TextViewBase.Big.Bold"
                    tools:text="{symbol_coin}" />

                <TextView
                    style="@style/TextViewBase.Big"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:text="@string/separator_name_coin" />

                <TextView
                    android:id="@+id/name_coin"
                    style="@style/TextViewBase.Big"
                    tools:text="{name_coin}" />

                <TextView
                    android:id="@+id/rate_coin"
                    style="@style/TextViewBase.Big.Bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:padding="@dimen/activity_horizontal_margin"
                    tools:text="{10 000}" />

                <TextView
                    android:id="@+id/currency_rate_coin"
                    style="@style/TextViewBase.Big"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:text="@string/name_unit_price"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/activity_margin">

                <TextView
                    style="@style/TextViewBase.Small.Bold"
                    android:text="@string/name_percent_change_24h" />

                <TextView
                    android:id="@+id/percent_change_24h"
                    style="@style/TextViewBase.Small"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    tools:text="+2" />

                <TextView
                    style="@style/TextViewBase.Small"
                    android:text="@string/name_unit_percent_change" />

                <TextView
                    style="@style/TextViewBase.Small.Bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/name_percent_change_7d"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/percent_change_7d"
                    style="@style/TextViewBase.Small"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:gravity="end"
                    tools:text="-1" />

                <TextView
                    style="@style/TextViewBase.Small"
                    android:text="@string/name_unit_percent_change" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>

