<?xml version="1.0" encoding="utf-8"?><!--<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:id="@+id/card_project"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:layout_margin="2dp"--><!--android:padding="4dp">-->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_coin_constraint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/item_coin_padding">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/img_coin"
        android:layout_width="@dimen/size_logo_list"
        android:layout_height="@dimen/size_logo_list"

        android:layout_margin="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/symbol_coin"
        style="@style/TextViewBase.Big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/margin_constraint_element"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_coin"
        app:layout_constraintTop_toBottomOf="@+id/name_coin"
        tools:text="{symbol_coin}" />

    <TextView
        android:id="@+id/name_coin"
        style="@style/TextViewBase.Small"
        android:layout_height="20dp"
        android:layout_margin="@dimen/margin_constraint_element"
        android:gravity="center"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/symbol_coin"
        app:layout_constraintStart_toEndOf="@+id/img_coin"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="{name_coin}" />


    <TextView
        android:id="@+id/rate_coin"
        style="@style/TextViewBase.Big.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="{10 000}" />

    <TextView
        android:id="@+id/currency_rate_coin"
        style="@style/TextViewBase.Big.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rate_coin"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Р" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/margin_percent"
            android:orientation="horizontal">


            <TextView
                style="@style/TextViewBase.Small.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/name_percent_change_1h" />


            <TextView
                android:id="@+id/percent_change_1h"
                style="@style/TextViewBase.Small"
                android:layout_gravity="fill_horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:gravity="end"
                tools:text="-1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/margin_percent"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewBase.Small.Bold"
                android:text="@string/name_percent_change_24h" />

            <TextView
                android:id="@+id/percent_change_24h"
                style="@style/TextViewBase.Small"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                tools:text="+2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/margin_percent"
            android:orientation="horizontal">


            <TextView
                style="@style/TextViewBase.Small.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_percent_change_7d" />


            <TextView
                android:id="@+id/percent_change_7d"
                style="@style/TextViewBase.Small"
                android:layout_gravity="fill_horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:gravity="end"
                tools:text="-1" />

        </LinearLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>






